Sequencer - Ctrl snapping a sequencer strip does not work if you specify the x axis #43989

Closed
opened 2015-03-14 08:21:23 +01:00 by Carlo Andreacchio · 10 comments

System Information
Windows 7 x64 gtx580

Blender Version
Broken: 85c38e7

Short description of error
Holding down Ctrl whilst moving & snapping a sequencer strip does not work if you specify the x axis

Exact steps for others to reproduce the error

  1. open up blender
  2. add in two strips offset on different channels
  3. offset one
  4. press g - x then hold down ctrl and try to snap to the other strip
  5. it does not work.

I can provide a blend file if needed.....

**System Information** Windows 7 x64 gtx580 **Blender Version** Broken: 85c38e7 **Short description of error** Holding down Ctrl whilst moving & snapping a sequencer strip does not work if you specify the x axis **Exact steps for others to reproduce the error** 1. open up blender 2. add in two strips offset on different channels 3. offset one 4. press g - x then hold down ctrl and try to snap to the other strip 5. it does not work. I can provide a blend file if needed.....

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed… Trying to fix that, but this is not so easy (stupid spaghetti transform code)…

Confirmed… Trying to fix that, but this is not so easy (stupid spaghetti transform code)…
Bastien Montagne self-assigned this 2015-03-14 10:30:03 +01:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Ok, so:

  • without constraint, works OK.
  • with constraint:
    seq snapping is not called; default 'snap frame' to 0 is hence used in apply func;

Tried to always call seq snapping, apply it directly to t->values (with all mysterious factor transformation & co), this works OK without constraint, but when constraints are enabled, it grid-snaps the value!!! Grrrrrraaaaaa!

Ok, so: * without constraint, works OK. * with constraint: **seq snapping is not called;** default 'snap frame' to 0 is hence used in apply func; Tried to always call seq snapping, apply it directly to t->values (with all mysterious factor transformation & co), this works OK without constraint, but when constraints are enabled, it grid-snaps the value!!! Grrrrrraaaaaa!

This issue was referenced by 05e3c261a4

This issue was referenced by 05e3c261a44b42181aadc8af9d603db2cb721b20

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 05e3c261a4.

Closed by commit 05e3c261a4.

This issue was referenced by 638368a930

This issue was referenced by 638368a9307b8702b22bd1e778096f00b5b90d4b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43989
No description provided.